--- a/i3/config
+++ b/i3/config
@@ -22,7 +22,7 @@ font pango:Cousine Nerd Font Mono 14
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
 exec --no-startup-id dex-autostart --autostart --environment i3
-exec --no-startup-id feh --bg-scale /home/dacbui308/Pictures/waifubackground3.png
+exec --no-startup-id feh --bg-scale --randomize ~/.wallpaper/
 exec --no-startup-id picom -b
 
 # The combination of xss-lock, nm-applet and pactl is a popular choice, so
@@ -57,11 +57,11 @@ bindsym $mod+Return exec alacritty
 bindsym $mod+Shift+q kill
 # start dmenu (a program launcher)
 # A more modern dmenu replacement is rofi:
-# bindcode $mod+40 exec "rofi -modi drun,run -show drun"
+bindcode $mod+40 exec "rofi -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
-bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
 bindsym $mod+x exec /home/$USER/.config/scripts/lock
+bindsym $mod+Shift+s exec gnome-screenshot -i
 
 # change focus
 bindsym $mod+h focus left
@@ -183,34 +183,60 @@ mode "resize" {
 }
 
 bindsym $mod+r mode "resize"
+set $rosewater #f5e0dc
+set $flamingo #f2cdcd
+set $pink #f5c2e7
+set $mauve #cba6f7
+set $red #f38ba8
+set $maroon #eba0ac
+set $peach #fab387
+set $yellow #f9e2af
+set $green #a6e3a1
+set $teal #94e2d5
+set $sky #89dceb
+set $sapphire #74c7ec
+set $blue #89b4fa
+set $lavender #b4befe90
+set $text #cdd6f4
+set $subtext1 #bac2de
+set $subtext0 #a6adc8
+set $overlay2 #9399b2
+set $overlay1 #7f849c
+set $overlay0 #6c7086
+set $surface2 #585b70
+set $surface1 #45475a
+set $surface0 #313244
+set $base #1e1e2ebb
+set $mantle #181825
+set $crust #11111b
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 # class                 border  bground text    indicator child_border
-client.focused          #6272A499 #6272A499 #F8F8F2 #6272A499   #6272A499
-client.focused_inactive #44475A4D #44475A4D #F8F8F2 #44475A4D   #44475A4D
-client.unfocused        #282A36 #282A36 #BFBFBF #282A36   #282A36
-client.urgent           #44475A4D #FF5555 #F8F8F2 #FF5555   #FF5555
-client.placeholder      #282A36 #282A36 #F8F8F2 #282A36   #282A36
+# target                 title     bg    text   indicator  border
+client.focused           $lavender $base $text  $rosewater $lavender
+client.focused_inactive  $overlay0 $base $text  $rosewater $overlay0
+client.unfocused         $overlay0 $base $text  $rosewater $overlay0
+client.urgent            $peach    $base $peach $overlay0  $peach
+client.placeholder       $overlay0 $base $text  $overlay0  $overlay0
+client.background        $base
 
-client.background       #F8F8F2
 
 bar {
   colors {
-    background #282A3699
-    statusline #F8F8F2
-    separator  #44475A4D
-
-    focused_workspace  #44475A4D #44475A4D #F8F8F2
-    active_workspace   #282A36 #44475A4D #F8F8F2
-    inactive_workspace #282A36 #282A36 #BFBFBF
-    urgent_workspace   #FF5555 #FF5555 #F8F8F2
-    binding_mode       #FF5555 #FF5555 #F8F8F2
+    background         $base
+    statusline         $text
+    focused_statusline $text
+    focused_separator  $base
+    focused_workspace  $base $base $green
+    active_workspace   $base $base $blue
+    inactive_workspace $base $base $surface1
+    urgent_workspace   $base $base $surface1
+    binding_mode       $base $base $surface1
   }
     font pango:Cousine Nerd Font 13
     status_command i3status -c ~/.config/i3status/config
     i3bar_command i3bar --transparency
-    tray_output none
 }
 
 # default gaps
