--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,7 @@
 set -g default-terminal tmux-256color
 set -g status-style bg=#663399
+set-option -a terminal-features alacritty:RGB
+set-option -g focus-events on
 set -g window-status-current-style 'underscore'
 set -g mode-keys vi
 set -g status-keys vi
@@ -20,4 +22,10 @@ bind -r k select-pane -U
 bind -r j select-pane -D 
 bind -r h select-pane -L 
 bind -r l select-pane -R
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'khanghh/tmux-dark-plus-theme'
+run '~/.tmux/plugins/tpm/tpm'
+
 
