--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
 set -g default-terminal tmux-256color
 set -g status-style bg=#663399
-set-option -a terminal-features alacritty:RGB
+set-option -a terminal-features xterm-kitty:RGB
 set-option -g focus-events on
 set -g window-status-current-style 'underscore'
 set -g mode-keys vi
@@ -14,10 +14,10 @@ unbind %
 bind | split-window -h
 unbind '"'
 bind - split-window -v
-bind -r C-k resize-pane -U
-bind -r C-j resize-pane -D
-bind -r C-h resize-pane -L
-bind -r C-l resize-pane -R
+bind -r C-k resize-pane -U 10
+bind -r C-j resize-pane -D 10
+bind -r C-h resize-pane -L 10
+bind -r C-l resize-pane -R 10
 bind -r k select-pane -U 
 bind -r j select-pane -D 
 bind -r h select-pane -L 
