--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,7 +25,23 @@ bind -r l select-pane -R
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'khanghh/tmux-dark-plus-theme'
+
+
+set -g @plugin 'catppuccin/tmux'
+set -g @catppuccin_window_left_separator ""
+set -g @catppuccin_window_right_separator " "
+set -g @catppuccin_window_middle_separator " █"
+set -g @catppuccin_window_number_position "right"
+
+set -g @catppuccin_window_default_fill "none"
+set -g @catppuccin_window_default_text "#W"
+set -g @catppuccin_window_middle_separator " | "
+set -g @catppuccin_window_current_fill "all"
+set -g @catppuccin_window_current_text "#W"
+set -g @catppuccin_status_modules_right "session host user date_time"
+set -g @catppuccin_date_time_text "%H:%M:%S %d-%m-%Y"
+
+
 run '~/.tmux/plugins/tpm/tpm'
 
 
