--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,11 @@
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
+set-option -g status-position top
+set -g base-index 1
+setw -g pane-base-index 1
 set -g default-terminal tmux-256color
 set -g status-style bg=#663399
-set-option -a terminal-features xterm-kitty:RGB
+set-option -a terminal-features xterm-256color:RGB
 set-option -g focus-events on
 set -g window-status-current-style 'underscore'
 set -g mode-keys vi
@@ -38,7 +43,7 @@ set -g @catppuccin_window_default_text "#W"
 set -g @catppuccin_window_middle_separator " | "
 set -g @catppuccin_window_current_fill "all"
 set -g @catppuccin_window_current_text "#W"
-set -g @catppuccin_status_modules_right "session host user date_time"
+set -g @catppuccin_status_modules_right "session user date_time"
 set -g @catppuccin_date_time_text "%H:%M:%S %d-%m-%Y"
 
 
