--- a/i3/config
+++ b/i3/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Cousine Nerd Font Mono 14
+font pango:Hack Nerd Font 14
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -24,6 +24,7 @@ font pango:Cousine Nerd Font Mono 14
 exec --no-startup-id dex-autostart --autostart --environment i3
 exec --no-startup-id picom -b --backend glx --no-use-damage &
 exec --no-startup-id nitrogen --restore &
+exec --no-startup-id systectl --user start docker-desktop
 
 # The combination of xss-lock, nm-applet and pactl is a popular choice, so
 # they are included here as an example. Modify as you see fit.
@@ -50,7 +51,7 @@ floating_modifier $mod
 tiling_drag modifier titlebar
 
 # start a terminal
-bindsym $mod+Return exec kitty --start-as=fullscreen
+bindsym $mod+Return exec alacritty
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -196,7 +197,7 @@ set $teal #94e2d5
 set $sky #89dceb
 set $sapphire #74c7ec
 set $blue #89b4fa
-set $lavender #b4befe90
+set $lavender #b4befe
 set $text #cdd6f4
 set $subtext1 #bac2de
 set $subtext0 #a6adc8
@@ -206,7 +207,7 @@ set $overlay0 #6c7086
 set $surface2 #585b70
 set $surface1 #45475a
 set $surface0 #313244
-set $base #1e1e2edd
+set $base #1e1e2e
 set $mantle #181825
 set $crust #11111b
 
@@ -235,9 +236,8 @@ bar {
     urgent_workspace   $base $base $surface1
     binding_mode       $base $base $surface1
   }
-    font pango:Cousine Nerd Font Propo 14
+    font pango:Hack Nerd Font 14
     status_command i3status
-    i3bar_command i3bar --transparency
 }
 
 # default gaps
