--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,7 +4,6 @@ set-option -g status-position top
 set -g base-index 1
 setw -g pane-base-index 1
 set -g default-terminal tmux-256color
-set -g status-style bg=#663399
 set-option -a terminal-features xterm-256color:RGB
 set-option -g focus-events on
 set -g window-status-current-style 'underscore'
@@ -33,6 +32,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 
 
 set -g @plugin 'catppuccin/tmux'
+set -g @catppuccin_status_background "#232136"
 set -g @catppuccin_window_left_separator ""
 set -g @catppuccin_window_right_separator " "
 set -g @catppuccin_window_middle_separator " █"
