--- a/sway/config
+++ b/sway/config
@@ -5,6 +5,8 @@
 # Read `man 5 sway` for a complete reference.
 
 
+output * scale 1
+output * pos 0 0 res 1920x1080
 ### Variables
 #
 # Logo key. Use Mod1 for Alt.
@@ -37,6 +39,7 @@ input type:touchpad {
     accel_profile "flat" # disable mouse acceleration (enabled by default; to set it manually, use "adaptive" instead of "flat")
     pointer_accel 0.5 # set mouse sensitivity (between -1 and 1)
 }
+focus_follows_mouse no
 
 ### Key bindings
 #
@@ -96,27 +99,27 @@ input type:touchpad {
 # Workspaces:
 #
     # Switch to workspace
-    bindsym $mod+1 workspace number 1
-    bindsym $mod+2 workspace number 2
-    bindsym $mod+3 workspace number 3
-    bindsym $mod+4 workspace number 4
-    bindsym $mod+5 workspace number 5
-    bindsym $mod+6 workspace number 6
-    bindsym $mod+7 workspace number 7
-    bindsym $mod+8 workspace number 8
-    bindsym $mod+9 workspace number 9
-    bindsym $mod+0 workspace number 10
+    bindsym $mod+comma workspace number 1
+    bindsym $mod+bracketleft workspace number 2
+    bindsym $mod+braceleft workspace number 3
+    bindsym $mod+parenleft workspace number 4
+    bindsym $mod+equal workspace number 5
+    bindsym $mod+plus workspace number 6
+    bindsym $mod+parenright workspace number 7
+    bindsym $mod+braceright workspace number 8
+    bindsym $mod+bracketright workspace number 9
+    bindsym $mod+exclam workspace number 10
     # Move focused container to workspace
-    bindsym $mod+Shift+1 move container to workspace number 1
-    bindsym $mod+Shift+2 move container to workspace number 2
-    bindsym $mod+Shift+3 move container to workspace number 3
-    bindsym $mod+Shift+4 move container to workspace number 4
-    bindsym $mod+Shift+5 move container to workspace number 5
-    bindsym $mod+Shift+6 move container to workspace number 6
-    bindsym $mod+Shift+7 move container to workspace number 7
-    bindsym $mod+Shift+8 move container to workspace number 8
-    bindsym $mod+Shift+9 move container to workspace number 9
-    bindsym $mod+Shift+0 move container to workspace number 10
+    bindsym $mod+Shift+comma move container to workspace number 1
+    bindsym $mod+Shift+bracketleft move container to workspace number 2
+    bindsym $mod+Shift+braceleft move container to workspace number 3
+    bindsym $mod+Shift+parenleft move container to workspace number 4
+    bindsym $mod+Shift+equal move container to workspace number 5
+    bindsym $mod+Shift+plus move container to workspace number 6
+    bindsym $mod+Shift+parenright move container to workspace number 7
+    bindsym $mod+Shift+braceright move container to workspace number 8
+    bindsym $mod+Shift+bracketright move container to workspace number 9
+    bindsym $mod+Shift+exclam move container to workspace number 10
     # Note: workspaces can have any name you want, not just numbers.
     # We just use 1-10 as the default.
 #
@@ -222,7 +225,6 @@ client.background        $base
 # Read `man 5 sway-bar` for more information about this section.
 bar {
     swaybar_command waybar
-    position top
 
     # When the status_command prints a new line to stdout, swaybar updates.
     # The default just shows the current date and time.
