Update full keyboard symbols

--- a/i3/config
+++ b/i3/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:RecMonoCasual Nerd Font 14
+font pango:FiraMono Nerd Font 15
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -22,14 +22,13 @@ font pango:RecMonoCasual Nerd Font 14
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
 exec --no-startup-id dex-autostart --autostart --environment i3
-exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock -i /usr/local/share/wallpaper/waifubackground24.png --nofork &
+exec --no-startup-id xss-lock --transfer-sleep-lock -- dm-tool lock --nofork &
 exec --no-startup-id nm-applet &
 exec --no-startup-id picom -b --backend glx --no-use-damage &
 exec --no-startup-id nitrogen --restore &
 exec --no-startup-id pasystray &
 exec --no-startup-id systectl --user start docker-desktop&
 exec --no-startup-id ibus-daemon -rxRd &
-exec --no-startup-id xkbcomp -I$HOME/.config/xkb $HOME/.config/xkb/keymap.xkb $DISPLAY &
 
 
 # The combination of xss-lock, nm-applet and pactl is a popular choice, so
@@ -138,8 +137,8 @@ set $ws10 "10"
     bindsym $mod+braceleft workspace number 3
     bindsym $mod+braceright workspace number 4
     bindsym $mod+equal workspace number 5
-    bindsym $mod+plus workspace number 6
-    bindsym $mod+asciicircum workspace number 7
+    bindsym $mod+asciicircum workspace number 6
+    bindsym $mod+plus workspace number 7
     bindsym $mod+asterisk workspace number 8
     bindsym $mod+parenleft workspace number 9
     bindsym $mod+parenright workspace number 10
@@ -188,21 +187,21 @@ mode "resize" {
 }
 
 bindsym $mod+r mode "resize"
-set $base           #232136
-set $surface        #2a273f
-set $overlay        #393552
+set $base           #191724
+set $surface        #1f1d2e
+set $overlay        #26233a
 set $muted          #6e6a86
 set $subtle         #908caa
 set $text           #e0def4
 set $love           #eb6f92
 set $gold           #f6c177
-set $rose           #ea9a97
-set $pine           #3e8fb0
+set $rose           #ebbcba
+set $pine           #31748f
 set $foam           #9ccfd8
 set $iris           #c4a7e7
-set $highlightlow   #2a283e
-set $highlightmed   #44415a
-set $highlighthigh  #56526e
+set $highlightlow   #21202e
+set $highlightmed   #403d52
+set $highlighthigh  #524f67
 
 # Teming border and Windows --------------
 # target                 title     bg    text   indicator  border
@@ -227,7 +226,6 @@ bar {
     urgent_workspace   $base $base $surface
     binding_mode       $base $base $text
   }
-    font pango:RecMonoCasual Nerd Font 12
     status_command i3status
 }
 
