--- a/dunst/dunstrc.d/50-theme.conf
+++ b/dunst/dunstrc.d/50-theme.conf
@@ -12,7 +12,7 @@
     gap_size = 3
     font = "Monospace 14"
 
-    icon_theme = "rose-pine-moon-icons"
+    icon_theme = "rose-pine-icons"
     enable_recursive_icon_lookup = true
     corner_radius = 2
 
@@ -39,4 +39,3 @@
     frame_color = "#eb6f92"
     default_icon = "dialog-error"
     format = "<b><span foreground='#eb6f92'>%s</span></b>\n%b"
-
