--- a/i3/config
+++ b/i3/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:FiraMono Nerd Font 15
+font pango:RecMonoCasual Nerd Font Mono
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -26,8 +26,6 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- dm-tool lock --nofork &
 exec --no-startup-id nm-applet &
 exec --no-startup-id picom -b --backend glx --no-use-damage &
 exec --no-startup-id nitrogen --restore &
-exec --no-startup-id pasystray &
-exec --no-startup-id systectl --user start docker-desktop&
 exec --no-startup-id ibus-daemon -rxRd &
 
 
@@ -136,7 +134,7 @@ set $ws10 "10"
     bindsym $mod+dollar workspace number 2
     bindsym $mod+braceleft workspace number 3
     bindsym $mod+braceright workspace number 4
-    bindsym $mod+equal workspace number 5
+    bindsym $mod+percent workspace number 5
     bindsym $mod+asciicircum workspace number 6
     bindsym $mod+plus workspace number 7
     bindsym $mod+asterisk workspace number 8
@@ -147,7 +145,7 @@ set $ws10 "10"
     bindsym $mod+Shift+dollar move container to workspace number 2
     bindsym $mod+Shift+braceleft move container to workspace number 3
     bindsym $mod+Shift+braceright move container to workspace number 4
-    bindsym $mod+Shift+equal move container to workspace number 5
+    bindsym $mod+Shift+percent move container to workspace number 5
     bindsym $mod+Shift+plus move container to workspace number 6
     bindsym $mod+Shift+asciicircum move container to workspace number 7
     bindsym $mod+Shift+asterisk move container to workspace number 8
