--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
-set-option -g status-position top
+set-option -g status-position bottom
 set -g base-index 1
 setw -g pane-base-index 1
 set -g default-terminal tmux-256color
@@ -30,36 +30,29 @@ bind -r l select-pane -R
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
-
-set -g @plugin 'catppuccin/tmux'
-set -g @catppuccin_window_status_enable "yes"
-set -g @catppuccin_window_status_icon_enable "yes"
-set -g @catppuccin_status_background "default"
-set -g @catppuccin_window_left_separator ""
-set -g @catppuccin_window_right_separator ""
-set -g @catppuccin_window_middle_separator "█"
-set -g @catppuccin_window_number_position "left"
-
-
-set -g @catppuccin_icon_window_last "󰖰"
-set -g @catppuccin_icon_window_current "󰖯"
-set -g @catppuccin_icon_window_zoom "󰁌"
-set -g @catppuccin_icon_window_mark "󰃀"
-set -g @catppuccin_icon_window_silent "󰂛"
-set -g @catppuccin_icon_window_activity "󱅫"
-set -g @catppuccin_icon_window_bell "󰂞"
-set -g @catppuccin_window_default_text " "
-set -g @catppuccin_window_current_text "#W"
-
-
-
-
-set -g @catppuccin_window_default_fill "none"
-set -g @catppuccin_window_middle_separator "|"
-set -g @catppuccin_window_current_fill "all"
-set -g @catppuccin_status_modules_right "session date_time"
-set -g @catppuccin_date_time_text "%H:%M:%S %d-%m-%Y"
-
+#!/usr/bin/env bash
+# Nightfox colors for Tmux
+# Style: carbonfox
+# Upstream: https://github.com/edeneast/nightfox.nvim/raw/main/extra/carbonfox/carbonfox.tmux
+set -g mode-style "fg=#0c0c0c,bg=#b6b8bb"
+set -g message-style "fg=#0c0c0c,bg=#b6b8bb"
+set -g message-command-style "fg=#0c0c0c,bg=#b6b8bb"
+set -g pane-border-style "fg=#b6b8bb"
+set -g pane-active-border-style "fg=#78a9ff"
+set -g status "on"
+set -g status-justify "left"
+set -g status-style "fg=#b6b8bb,bg=#0c0c0c"
+set -g status-left-length "100"
+set -g status-right-length "100"
+set -g status-left-style NONE
+set -g status-right-style NONE
+set -g status-left "#[fg=#0c0c0c,bg=#78a9ff,bold] #S #[fg=#78a9ff,bg=#0c0c0c,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=#0c0c0c,bg=#0c0c0c,nobold,nounderscore,noitalics]#[fg=#78a9ff,bg=#0c0c0c] #{prefix_highlight} #[fg=#b6b8bb,bg=#0c0c0c,nobold,nounderscore,noitalics]#[fg=#0c0c0c,bg=#b6b8bb] %Y-%m-%d  %I:%M %p #[fg=#78a9ff,bg=#b6b8bb,nobold,nounderscore,noitalics]#[fg=#0c0c0c,bg=#78a9ff,bold] #h "
+setw -g window-status-activity-style "underscore,fg=#7b7c7e,bg=#0c0c0c"
+setw -g window-status-separator ""
+setw -g window-status-style "NONE,fg=#7b7c7e,bg=#0c0c0c"
+setw -g window-status-format "#[fg=#0c0c0c,bg=#0c0c0c,nobold,nounderscore,noitalics]#[default] #I  #W #F #[fg=#0c0c0c,bg=#0c0c0c,nobold,nounderscore,noitalics]"
+setw -g window-status-current-format "#[fg=#0c0c0c,bg=#b6b8bb,nobold,nounderscore,noitalics]#[fg=#0c0c0c,bg=#b6b8bb,bold] #I  #W #F #[fg=#b6b8bb,bg=#0c0c0c,nobold,nounderscore,noitalics]"
 
 run '~/.tmux/plugins/tpm/tpm'
 
