--- a/sway/config
+++ b/sway/config
@@ -22,14 +22,6 @@ set $term alacritty
 # on the original workspace that the command was run on.
 set $menu dmenu_path | wmenu | xargs swaymsg exec -- "rofi -show drun"
 
-
-input * xkb_layout custom
-input type:keyboard {
-        xkb_layout custom
-        xkb_options caps:escape
-}
-
-
 input type:touchpad {
     left_handed enabled
     tap enabled
@@ -102,9 +94,9 @@ focus_follows_mouse no
     bindsym $mod+dollar workspace number 2
     bindsym $mod+braceleft workspace number 3
     bindsym $mod+braceright workspace number 4
-    bindsym $mod+equal workspace number 5
-    bindsym $mod+plus workspace number 6
-    bindsym $mod+asciicircum workspace number 7
+    bindsym $mod+percent workspace number 5
+    bindsym $mod+asciicircum workspace number 6
+    bindsym $mod+plus workspace number 7
     bindsym $mod+asterisk workspace number 8
     bindsym $mod+parenleft workspace number 9
     bindsym $mod+parenright workspace number 10
@@ -113,7 +105,7 @@ focus_follows_mouse no
     bindsym $mod+Shift+dollar move container to workspace number 2
     bindsym $mod+Shift+braceleft move container to workspace number 3
     bindsym $mod+Shift+braceright move container to workspace number 4
-    bindsym $mod+Shift+equal move container to workspace number 5
+    bindsym $mod+Shift+percent move container to workspace number 5
     bindsym $mod+Shift+plus move container to workspace number 6
     bindsym $mod+Shift+asciicircum move container to workspace number 7
     bindsym $mod+Shift+asterisk move container to workspace number 8
@@ -181,34 +173,32 @@ mode "resize" {
     bindsym Return mode "default"
     bindsym Escape mode "default"
 }
+
 bindsym $mod+r mode "resize"
-#Color scheme
-set $rosewater #f5e0dc
-set $flamingo #f2cdcd
-set $pink #f5c2e7
-set $mauve #cba6f7
-set $red #f38ba8
-set $maroon #eba0ac
-set $peach #fab387
-set $yellow #f9e2af
-set $green #a6e3a1
-set $teal #94e2d5
-set $sky #89dceb
-set $sapphire #74c7ec
-set $blue #89b4fa
-set $lavender #b4befe
-set $text #cdd6f4
-set $subtext1 #bac2de
-set $subtext0 #a6adc8
-set $overlay2 #9399b2
-set $overlay1 #7f849c
-set $overlay0 #6c7086
-set $surface2 #585b70
-set $surface1 #45475a
-set $surface0 #313244
-set $base #1e1e2e
-set $mantle #181825
-set $crust #11111b
+set $base           #191724
+set $surface        #1f1d2e
+set $overlay        #26233a
+set $muted          #6e6a86
+set $subtle         #908caa
+set $text           #e0def4
+set $love           #eb6f92
+set $gold           #f6c177
+set $rose           #ebbcba
+set $pine           #31748f
+set $foam           #9ccfd8
+set $iris           #c4a7e7
+set $highlightlow   #21202e
+set $highlightmed   #403d52
+set $highlighthigh  #524f67
+
+# Teming border and Windows --------------
+# target                 title     bg    text   indicator  border
+client.focused           $rose     $base $text  $rose      $rose
+client.focused_inactive  $text     $base $text  $subtle    $surface
+client.unfocused         $text     $base $text  $overlay   $overlay
+client.urgent            $text     $base $text  $love      $love
+client.placeholder       $base     $base $text  $overlay   $overlay
+client.background        $base
 
 client.focused           $lavender $base $text  $rosewater $lavender
 client.focused_inactive  $overlay0 $base $text  $rosewater $overlay0
@@ -360,6 +350,8 @@ mode "$mode_gaps_left" {
 }
 
 include /etc/sway/config.d/*
+
 exec --no-startup-id ibus-daemon -rxRd &
 exec --no-startup-id waypaper --restore&
+exec --no-startup-id pasystray &
 exec --no-startup-id nm-applet &
