--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -8,11 +8,11 @@
 # unless explicitly requested using the wintypes option.
 #
 # shadow = false
-shadow = false;
+shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
-shadow-radius = 15;
+shadow-radius = 12;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
 # shadow-opacity = .75
@@ -55,13 +55,29 @@ backend = "glx";
 no-use-damage = true;
 vsync = true;
 detect-transient = true;
+
+#################################
+#           Corners             #
+#################################
+
+# Sets the radius of rounded window corners. When > 0, the compositor will
+# round the corners of windows. Does not interact well with
+# `transparent-clipping`.
+corner-radius = 0
+
+# Exclude conditions for rounded corners.
+rounded-corners-exclude = [
+  "window_type = 'dock'",
+  "window_type = 'desktop'"
+];
+
 #################################
 #     Background-Blurring       #
 #################################
 blur-method = "dual_kawase";
 blur-size = 12;
 blur-deviation = true;
-blur-strength = 2;
+blur-strength = 1;
 blur-background = true;
 blur-background-exclude = [
   "window_type = 'dock'",
@@ -74,3 +90,5 @@ fading = true;
 fade-in-step = 0.01;
 fade-out-step = 0.01;
 fade-delta = 1;
+detect-rounded-corners = true;
+
