--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,7 +10,7 @@ set -g window-status-current-style 'underscore'
 set -g mode-keys vi
 set -g status-keys vi
 set escape-time 0
-set -g prefix C-q
+set -g prefix C-a
 unbind C-b
 unbind r
 bind r source-file ~/.tmux.conf
@@ -18,24 +18,34 @@ unbind %
 bind | split-window -h
 unbind '"'
 bind - split-window -v
-bind -r C-k resize-pane -U 10
-bind -r C-j resize-pane -D 10
-bind -r C-h resize-pane -L 10
-bind -r C-l resize-pane -R 10
+bind -r C-k resize-pane -U 5
+bind -r C-j resize-pane -D 5
+bind -r C-h resize-pane -L 5
+bind -r C-l resize-pane -R 5
 bind k select-pane -U 
 bind j select-pane -D 
 bind h select-pane -L 
 bind l select-pane -R
 
+bind-key -n "^e" run-shell "$HOME/termconf/fzf-script.sh"
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'dracula/tmux'
+set -g @plugin 'catppuccin/tmux'
+set -g @catppuccin_flavour "cyberdream"
+set -g @catppuccin_window_left_separator ""
+set -g @catppuccin_window_right_separator " "
+set -g @catppuccin_window_middle_separator " █"
+set -g @catppuccin_window_number_position "right"
 
-set -g @dracula-plugins "ram-usage cpu-usage time battery"
-set -g @dracula-show-left-icon session
-set -g @dracula-show-timezone false
-set -g @dracula-show-powerline true
-
+set -g @catppuccin_window_default_fill "none"
+set -g @catppuccin_window_default_text "#W"
+set -g @catppuccin_window_middle_separator " | "
+set -g @catppuccin_window_current_fill "all"
+set -g @catppuccin_window_current_text "#W"
+set -g @catppuccin_status_modules_right "session date_time uptime battery"
+set -g @catppuccin_date_time_text "%H:%M:%S %d-%m-%Y"
+set -g @plugin 'tmux-plugins/tmux-battery'
 
 
 run '~/.tmux/plugins/tpm/tpm'
