Update tmux config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,7 +27,7 @@ bind j select-pane -D
 bind h select-pane -L 
 bind l select-pane -R
 
-bind-key -n "^e" run-shell "$HOME/termconf/fzf-script.sh"
+bind-key "e" run-shell "$HOME/termconf/fzf-script.sh"
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
